Update to direct book link

--- a/rentals/lodge/index.html
+++ b/rentals/lodge/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="0; URL=https://homesawayfromhome.holidayfuture.com/all-listings">
+    <meta http-equiv="refresh" content="0; URL=https://homesawayfromhome.holidayfuture.com/listings/338426">
 </head>
 <body>
-    <p>Browser not redirecting? Check out <a href="https://homesawayfromhome.holidayfuture.com/all-listings">https://homesawayfromhome.holidayfuture.com/all-listings</a>...</p>
+    <p>Browser not redirecting? Check out <a href="https://homesawayfromhome.holidayfuture.com/listings/338426">https://homesawayfromhome.holidayfuture.com/listings/338426</a>...</p>
 </body>
 </html>
